Closed Bug 1859945 Opened 2 years ago Closed 2 years ago

Sometimes about:blank page does not reflect the color scheme correctly

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

VERIFIED FIXED
120 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox118 --- wontfix
firefox119 --- wontfix
firefox120 --- verified
firefox121 --- verified

People

(Reporter: emk, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Steps to reproduce:

  1. Set Firefox Theme to Dark. (You can skip this step if the system color scheme is Dark.)
  2. Open about:blank. Make sure the background color is black.
  3. Press Ctrl+U to open a view-source:about:blank tab.
  4. Press Ctrl+W to close the view source tab.

Actual result:
The about:blank background color is white.
Note: If you switch to another tab and back to the about:blank tab, the background color backs to black.

Expected result:
The about:blank background color should keep black.

Regression range: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=d48c4e5647e49a631a5a0ced016e06426770fafa&tochange=88ec6682eab1c5c36cb839c8db0156446559a1cb

Set release status flags based on info from the regressing bug 1845779

:emilio, since you are the author of the regressor, bug 1845779, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

I came here from another behavior regression which is pretty disturbing: https://github.com/darkreader/darkreader/issues/11190#issuecomment-1769990134
Simply speaking, when Firefox introduced auto dark mode switching officially, we don't need to use ShadowFox to get rid of "flash bang" between opening a link when using dark mode and dark reader anymore. But the mentioned bug fix reintroduced this unwanted behavior, and it doesn't seem fixable by hacking Firefox CSS again.
It's quite uncomfortable and is happening on all platforms now.

Flags: needinfo?(emilio)
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Attached file More obvious test case

Click the "Open about:blank in new window" link in the attached test case. White background tab will open even though the tab contains a content-inaccessible about:blank. I think bc && bc->IsTop() && bc->Group()->Toplevels().Length() == 1 is too restrictive.

Attachment #9359323 - Attachment description: Bug 1859945 - Don't check toplevel count for content-inaccessible-about-blank check. r=nika → Bug 1859945 - Restore old content-inaccessible-about:blank behavior. r=nika
Blocks: 1860098
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ebf0b67d051 Restore old content-inaccessible-about:blank behavior. r=nika
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch
Flags: qe-verify+

Reproducible on a 2023-10-18 Nightly build on macOS 12.
Verified as fixed on Firefox 120.0b4 and Nightly 121.0a1 on macOS 12, Windows 10, Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: