Bug 1859945 - Restore old content-inaccessible-about:blank behavior. r=nika

While not perfect, as you noted, it's probably good enough. It's also a
bit safer, probably.

Differential Revision: https://phabricator.services.mozilla.com/D191413