dom/base/Document.h
@@ -4020,9 +4020,10 @@ class Document : public nsINode,
 
   nsIPermissionDelegateHandler* PermDelegateHandler();
 
-  // Returns whether this is a top-level about:blank page without an opener
-  // (and thus not accessible by content).
-  bool IsContentInaccessibleAboutBlank() const;
+  // Returns whether this is a top-level about:blank page without an opener (and
+  // thus likely not accessible by content). Likely because it shouldn't be used
+  // for security checks for example, see bug 1860098.
+  bool IsLikelyContentInaccessibleTopLevelAboutBlank() const;
 
   // CSS prefers-color-scheme media feature for this document.
   enum class IgnoreRFP { No, Yes };
